--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=3953736611');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=3953736612');
       });
     }
   </script>
-  <script src="main.dart.js?version=1" type="application/javascript"></script>
+  <script src="main.dart.js?v=3953736612" type="application/javascript"></script>
 </body>
 
 </html>
