--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       });
     }
   </script>
-  <script src="main.dart.js?v=3953736612" type="application/javascript"></script>
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
 
 </html>
